fixing images size top week on tablet 768px version

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,9 @@ figure{
 
 img{
     width: 100%;
+    height: 100%;
     object-fit: cover;
+    object-position: center;
 }
 
 a{text-decoration: none;}
@@ -216,6 +218,10 @@ a{text-decoration: none;}
     background-color: var(--light-dark2);
 }
 
+
+.aside__figure--h{
+    height: 15rem;
+}
 /* buttons */
 .button--bg{
     color: white;
@@ -241,6 +247,8 @@ a{text-decoration: none;}
     .aside__card--w2{
         width: calc(95% / 2);
     }
+
+   
 }
 
 /* 992px */
@@ -252,5 +260,9 @@ a{text-decoration: none;}
     
     .aside__card--w2{
         width: 100%;
+    }
+
+    .aside__figure--h{
+        height: auto;
     }
 }
